# evo_telebot_works

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  server_init.py  server_opening.py  server_sync.py  tc.z_reopt2 (1).json
bd/: model.py
bot/: __init__.py  config.py  state_machine.py  telegram.py  util.py  util_s.py
evotor/: config.py  evotor.py  sync.py  util.py
reports/: V1.py  V3_1.py  __init__.py  balances.py  break_.py  break_today.py  cash_balance.py  cash_balance_in_tt.py  cash_balance_in_tt_all.py  cash_flow.py  cash_outcome.py  data_analysis.py  file_json_download.py  fm.py  get_accept.py  get_cash_report.py  get_commodity_reports.py  get_contact_information.py  get_desired_salary.py  get_education.py  get_electro_sales.py  get_electro_sales_plan.py  get_family_status.py  get_for_product_liquidity.py  get_leftovers.py  get_personal_information.py  get_questionnaire.py  get_relatives_information.py  get_salary_today.py  get_sales.py  get_work_experience.py  inputs.py  more_info.py  questionnaire.py  salary.py  sales_today.py  settings.py  shift_opening.py  test.py  util.py  (+2 more)
reports/html/: break.html
schedules/: __init__.py  check_store_opening.py  get_questionnaire.py
