[tool.poetry]
name = "evo_telebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "bd" },
    { include = "bot" },
    { include = "evotor" },
    { include = "reports" },
]

# [tool.poetry.scripts]
# someproject = 'some_project.main:main'


[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.12.0"
pyfunctional = "^1.4.3"
mongoengine = "^0.27.0"
arrow = "^1.2.3"
schedule = "^1.2.0"
geopy = "^2.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
profilehooks = "^1.12.0"
matplotlib = "^3.7.2"
plotly = "^5.16.1"
kaleido = "0.2.1"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
uvloop = "^0.19.0"
requests = "^2.31.0"
httpx = "^0.26.0"
functional = "^0.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
