[tool.poetry]
name = "evo_telebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "bd" },
    { include = "bot" },
    { include = "evotor" },
    { include = "reports" },
    { include = "schedules" },
]

# [tool.poetry.scripts]
# someproject = 'some_project.main:main'


[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.12.0"
pyfunctional = "^1.4.3"
mongoengine = "0.27.0"
arrow = "^1.2.3"
schedule = "^1.2.0"
geopy = "^2.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
profilehooks = "^1.12.0"
plotly = "^5.16.1"
kaleido = "0.2.1"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
uvloop = "^0.19.0"
requests = "^2.31.0"
psutil = "^5.9.8"
openpyxl = "^3.1.2"
numbers-parser = "^4.10.5"
apscheduler = "^3.10.4"
python-docx = "^1.1.2"
pytz = "^2024.1"
datetime = "^5.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
